<resources>
    <string name="app_name">CommLogin</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email (optional)</string>
    <string name="prompt_password">Password</string>
    <string name="studentID">ID No.</string>
    <string name="sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_id">Entered invalid ID</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

</resources>
