<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.megan.commlogin.Login"
    android:background="@drawable/bkg9"

    >
    <!--android:background="@drawable/tile_background"-->
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:background="@drawable/uwi"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/studentID"
                android:hint="@string/studentID"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="15dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="15dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="35dp"
                android:id="@+id/radioGender"
                >

                <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:paddingRight="30dp"
                android:textColor="#ffffff"
                android:id="@+id/radioMale"
                android:checked="true"
                android:textSize="15dp"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female"
                    android:paddingRight="30dp"
                    android:textSize="15dp"
                    android:textColor="#ffffff"
                    android:id="@+id/radioFemale" />
            </RadioGroup>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:id="@+id/signUpButton"
                android:background="@android:color/holo_blue_dark"
                android:textColor="#ffffffff"
                android:padding="5dp"
                android:layout_gravity="center"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
